--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,17 @@
-cmake_minimum_required(VERSION 3.15)
-project(PC_Single C)
+cmake_minimum_required(VERSION 3.3)
+project(PC2)
 
 set(CMAKE_C_STANDARD 99)
+find_package(MPI REQUIRED)
+include_directories(${MPI_INCLUDE_PATH})
 
-add_executable(PC_Single main.c)
+LINK_LIBRARIES(${MPI_CXX_LIBRARIES})
+SET(CMAKE_C_COMPILER mpicc)
+SET(CMAKE_CXX_COMPILER mpicxx)
+SET(SOURCE_FILES main.c)
+SET(CMAKE_CXX_FLAGS -Wall -Wextra -Wconversion -np 4 )
+
+
+add_executable(PC2 ${SOURCE_FILES})
+
+
